# aurora-4x-like

./: .gitignore  BUILD_INSTRUCTIONS.md  CMakeLists.txt  FEATURES.md  IMPLEMENTATION_SUMMARY.md  MOUSE_UI_DEMO.txt  QUICKSTART.md  README.md  build.bat  build.sh  main.py  requirements.txt
_codeql_build_dir/: aurora4x
include/: battle_viewer.h  combat.h  empire.h  galaxy.h  game.h  research.h  resources.h  ui.h
src/: __init__.py  battle_viewer_win32.cpp  combat.cpp  combat.py  empire.cpp  empire.py  galaxy.cpp  galaxy.py  game.cpp  game.py  gui_win32.cpp  main.cpp  main.cpp.backup  main_win32_gui.cpp  research.cpp  research.py  resources.cpp  resources.py  ui.cpp
